--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "express": "^4.19.2",
+    "next": "^15.3.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "autoprefixer": "^10.4.21",
+    "nodemon": "^3.1.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
